# autus

./: .autus  .autus.config.json  .autus.env.yaml  .autus.identity  .coverage  .cursorignore  .cursorrules  .dockerignore  .env.example  .env.sample  .envrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_IMMUTABLE.md  ARCHITECTURE_REVIEW.md  ARMP.md  ARMP_STATUS.md  ARMP_V2_COMPLETE.md  AUTUS_ARCHITECTURE.md  AUTUS_CORE_COMPLETE.md  AUTUS_CORE_V1.sql  AUTUS_CURRENT_STATUS.md  AUTUS_FINAL_ARCHITECTURE.md  AUTUS_PROJECT.backup.20251124151737  AUTUS_PROJECT.yaml  AUTUS_STATUS.md  AUTUS_아키텍처_문서.js  AUTUS_엔진_연결_가이드.md  CHANGELOG.md  CLAUDE.md  COLLAPSE_EQUATION.md  COMPLETENESS_CHECK.md  COMPREHENSIVE_REVIEW_CHECKLIST.md  CONSTITUTION.md  CURSOR_COMMANDS.txt  CURSOR_QUICKSTART.md  CURSOR_REMAINING_TASKS.md  CURSOR_TASKS.md  CURSOR_TASKS_QUICK.md  CURSOR_WORK_COMPLETE.md  (+162 more)
.autus/: memory.yaml
.backup_20251206_221155/: main.py
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml
01_core/: __init__.py  autusfile.py  cli.py  dsl.py  per_loop.py
02_packs/: github_pack.yaml  news_pack.yaml  test_pack.yaml  time_pack.yaml  weather_pack.yaml
adapters/: adapter_template.py  adapter_test_results.json  adapter_test_runner.py  base.py  homepage_adapter.py  scheduler.py  traffic_adapter.py  webhook_adapter.py
agent/: desktop_agent.py
alembic/: env.py
allthatbasket/: README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json
api/: cache.py  (+17 more)
kernel_service/: README.md  boost_to_90.py  ignition.py  pyproject.toml  requirements.txt
kernel_service/app/: __init__.py  autus_state.py  chain.py  commit_pipeline.py  goal_physics.py  kernel.py  main.py  main_production.py  mandala_transform.py  node_classifier.py  physics_kernel.py  replay.py  validator.py  validators.py
kernel_service/app/api/: v2_engines.py
kernel_service/app/auth/: __init__.py  jwt.py  middleware.py
kernel_service/app/db/: __init__.py  models.py  repository.py
kernel_service/app/middleware/: __init__.py  error_handler.py  logging_middleware.py
kernel_service/autus_kernel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kernel_service/config/: draft_limits.json
kernel_service/data/: motion_registry.json
kernel_service/data/markers/: marker_00001.json  marker_00001_final.json
kernel_service/tests/: __init__.py  test_api_integration.py  test_checklist.py  test_determinism.py  test_e2e.py  test_node_ops.py  test_state_pipeline.py
(+8059 files in other folders)
